css/movie.css
body {
    background-image: url(../images/movie/background.png);
    font-size: 8pt;
    font-family: Tahoma, sans-serif;
}

#img-banner {
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

#banner {
    background-image: url(../images/movie/bannerbg.png);
    height: 50px;
    box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
}

.centered-header {
    margin-left: auto;
    margin-right: auto;
    width: fit-content;
    font-family: Tahoma, sans-serif;
    font-size: 24pt;
    text-shadow: 2px 2px #999999;
}

#content {
    width: 800px;
    margin-left: auto;
    margin-right: auto;
    border: 4px grey solid;
    border-radius: 20px;
    overflow: hidden;
    box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
}

#reviews {
    width: 550px;
}

#review-text {
    padding: 6px;
    column-count: 2;
    column-width: 47%;
    column-gap: 2%;
}

#general-overview {
    width: 250px;
    background-color: #A2B964;
    font-family: Arial, Helvetica, sans-serif;
}

#general-overview>dl {
    padding: 10pt;
}

#general-overview dt {
    font-weight: bold;
}

#general-overview dd {
    margin-bottom: 10pt;
}

.flex-container {
    display: flex;
}

#rating-icon {
    background-image: url(../images/movie/rbg.png);
    font-size: 46pt;
    color: red;
    height: 83px;
}

#rating {
    vertical-align: top;
}

.comment {
    border: 2px solid gray;
    border-radius: 10px;
    padding: 8px;
    font-size: 8pt;
    font-weight: bold;
    background-color: #E8DC9B;
}

.comment-by {
    font-style: italic;
    margin-bottom: 20pt;
}

.comment-by>img {
    float: left;
}

#no-of-reviews {
    background-color: #A2B964;
    text-align: center;
    padding: 5px;
}

.page-validator {
    position: fixed;
    bottom: 2px;
    right: 2px;
    font-size: 18px;
    opacity: 50%;
}

